--- a/.env
+++ b/.env
@@ -1,31 +1,31 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:oktL3e1kvNcjCEONjyxSkd1XhF+2nWMfjaTJfe4ydPY=
+APP_KEY=base64:Z71vb6XqvzZ67gC7Q4z6ScOkYlmgoJzJ1PkjE4fLXTE=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_URL=http://localhost
 
-# APP_LOCALE=en
-# APP_FALLBACK_LOCALE=en
-# APP_FAKER_LOCALE=en_US
+APP_LOCALE=en
+APP_FALLBACK_LOCALE=en
+APP_FAKER_LOCALE=en_US
 
-# APP_MAINTENANCE_DRIVER=file
-# # APP_MAINTENANCE_STORE=database
+APP_MAINTENANCE_DRIVER=file
+# APP_MAINTENANCE_STORE=database
 
-# PHP_CLI_SERVER_WORKERS=4
+PHP_CLI_SERVER_WORKERS=4
 
-# BCRYPT_ROUNDS=12
+BCRYPT_ROUNDS=12
 
-# LOG_CHANNEL=stack
-# LOG_STACK=single
-# LOG_DEPRECATIONS_CHANNEL=null
-# LOG_LEVEL=debug
+LOG_CHANNEL=stack
+LOG_STACK=single
+LOG_DEPRECATIONS_CHANNEL=null
+LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=hotel_management
+DB_DATABASE=laravel
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=123456
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
